platform/gcloud/usage-metering-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibm-usage-metering-instance-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - name: ibm-usage-metering-fetch
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: ibm-usage-metering-upload
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/component: ibm-usage-metering-instance
    app.kubernetes.io/name: ibm-usage-metering
