platform/gcloud/usage-metering-service-NGINX.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usage-metering-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - host: mynicecompany.com
      http:
        paths:
          - path: /ibm-usage-metering-instance(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ibm-usage-metering-instance
                port:
                  number: 8080
